--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
       - checkout
       - setup_environment
       - run:
-    name: Configure git user
-    command: |
-        git config --global user.email "you@example.com"
-        git config --global user.name "Your Name"
+          name: Configure git user
+          command: |
+              git config --global user.email "you@example.com"
+              git config --global user.name "Your Name"
       - sync_repositories
       - build_lineageos
 
@@ -38,7 +38,8 @@ commands:
       - run: |
           cd ~/lineage/src
           source build/envsetup.sh
-          lunch lineage_a718lte-userdebug m -j$(nproc) bacon
+          lunch lineage_a7y18lte-userdebug
+          m -j$(nproc) bacon
 
 workflows:
   version: 2
