--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ commands:
           git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt.git hardware/samsung_slsi/libbt
           git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal.git hardware/samsung_slsi/scsc_wifibt/wifi_hal
           git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib.git hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
-          git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common.git device/samsung/exynos7885-common
+          git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common.git device/samsung/a7y18lte
           repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
 
   build_lineageos:
