--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ commands:
           git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt.git -b lineage-18.1 hardware/samsung_slsi/libbt
           git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal.git -b lineage-18.1 hardware/samsung_slsi/scsc_wifibt/wifi_hal
           git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib.git -b lineage-18.1 hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
-          git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common.git -b lineage-18.1 device/samsung/a7y18lte
+          git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common.git -b lineage-18.1 device/samsung/exynos7885
           
 
   build_lineageos:
@@ -43,7 +43,7 @@ commands:
       - run: |
           cd ~/lineage/src
           source build/envsetup.sh
-          lunch a7y18lte-userdebug
+          lunch exynos7885-userdebug
           m -j$(nproc) bacon
 
 workflows:
