--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ commands:
       - run: |
           mkdir -p ~/lineage/src
           cd ~/lineage/src
-          repo init -u https://github.com/LineageOS/android.git -b lineage-18.1
+          repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --git-lfs
           repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
           git clone https://github.com/LineageOS/android_hardware_samsung.git -b lineage-18.1 hardware/samsung
           git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt.git -b lineage-18.1 hardware/samsung_slsi/libbt
