--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ commands:
       - run: |
           cd ~/lineage/src
           source build/envsetup.sh
-          lunch exynos7885-userdebug
+          lunch lineage_a7y18lte-userdebug
           m -j$(nproc) bacon
 
 workflows:
