--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,108 @@
 version: 2.1
 
+parameters:
+  branch_name:
+    type: string
+    default: "lineage-18.1"
+  git_email:
+    type: string
+    default: "you@example.com"
+  git_name:
+    type: string
+    default: "Your Name"
+  target_device:
+    type: string
+    default: "a7y18lte"
+
 executors:
   build-executor:
     docker:
       - image: lineageos4microg/docker-lineage-cicd:latest
 
 jobs:
-  build:
+  setup:
     executor: build-executor
     steps:
       - checkout
-      - setup_environment
-      - run:
-          name: Configure git user
-          command: |
-              git config --global user.email "you@example.com"
-              git config --global user.name "Your Name"
-      - sync_repositories
-      - build_lineageos
+      - setup_environment:
+          device_name: << parameters.target_device >>
+      - configure_git:
+          email: << parameters.git_email >>
+          name: << parameters.git_name >>
+      - install_git_lfs
+      
+  sync_repo:
+    executor: build-executor
+    steps:
+      - run: |
+          mkdir -p ~/android/lineage/src
+          cd ~/android/lineage/src
+          repo init -u https://github.com/LineageOS/android.git -b << parameters.branch_name >> --git-lfs
+          repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
+
+  clone_git_repos:
+    executor: build-executor
+    steps:
+      - run: |
+          git clone https://github.com/LineageOS/android_hardware_samsung hardware/samsung -b << parameters.branch >>
+          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt hardware/samsung_slsi/libbt -b << parameters.branch >>
+          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal hardware/samsung_slsi/scsc_wifibt/wifi_hal -b << parameters.branch >>
+          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib -b << parameters.branch >>
+          git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common device/samsung/exynos7885-common -b << parameters.branch >>
+          git clone https://github.com/exynos7885-dev/android_device_samsung_a7y18lte device/samsung/a7y18lte -b << parameters.branch >>
+          git clone https://github.com/exynos7885-dev/android_vendor_samsung_exynos7885-common vendor/samsung/exynos7885 -b << parameters.branch >>
+          git clone https://github.com/exynos7885-dev/android_kernel_samsung_exynos7885 kernel/samsung -b << parameters.branch >>
+
+  build_lineage:
+    executor: build-executor
+    steps:
+      - run: |
+          cd ~/android/lineage/src
+          source build/envsetup.sh
+          lunch lineage_<< parameters.target_device >>-userdebug
+          m -j$(nproc) bacon
 
 commands:
   setup_environment:
+    parameters:
+      device_name:
+        type: string
     steps:
-      - run: echo 'export TARGET_DEVICE=a7y18lte' >> $BASH_ENV
+      - run: echo 'export TARGET_DEVICE=<< parameters.device_name >>' >> $BASH_ENV
 
-  sync_repositories:
+  configure_git:
+    parameters:
+      email:
+        type: string
+      name:
+        type: string
     steps:
-      - run: |
-          mkdir -p ~/lineage/src
-          cd ~/lineage/src
-          repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --git-lfs
-          repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
-          git clone https://github.com/LineageOS/android_hardware_samsung.git -b lineage-18.1 hardware/samsung
-          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt.git -b lineage-18.1 hardware/samsung_slsi/libbt
-          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal.git -b lineage-18.1 hardware/samsung_slsi/scsc_wifibt/wifi_hal
-          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib.git -b lineage-18.1 hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib
-          git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common.git -b lineage-18.1 device/samsung/exynos7885
-          
+      - run:
+          name: Configure git user
+          command: |
+              git config --global user.email "<< parameters.email >>"
+              git config --global user.name "<< parameters.name >>"
 
-  build_lineageos:
+  install_git_lfs:
     steps:
-      - run: |
-          cd ~/lineage/src
-          source build/envsetup.sh
-          lunch lineage_a7y18lte-userdebug
-          m -j$(nproc) bacon
+      - run:
+          name: Install git-lfs
+          command: |
+              curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
+              sudo apt-get install git-lfs
+              git lfs install
 
 workflows:
   version: 2
   build-lineage:
     jobs:
-      - build
+      - setup
+      - sync_repo:
+          requires:
+            - setup
+      - clone_git_repos:
+          requires:
+            - sync_repo
+      - build_lineage:
+          requires:
+            - clone_git_repos
