--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           device_name: << parameters.target_device >>
       - configure_git:
           email: << parameters.git_email >>
-          name: << parameters.git_name >>
+          user_name: << parameters.git_name >>
       - install_git_lfs
       
   sync_repo:
@@ -81,7 +81,7 @@ commands:
           name: Configure git user
           command: |
               git config --global user.email "<< parameters.email >>"
-              git config --global user.name "<< parameters.name >>"
+              git config --global user.name "<< parameters.user_name >>"
 
   install_git_lfs:
     steps:
