--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ commands:
     parameters:
       email:
         type: string
-      name:
+      username:
         type: string
     steps:
       - run:
