--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 parameters:
-  branch_name:
+  branch_username:
     type: string
     default: "lineage-18.1"
   git_email:
@@ -44,14 +44,14 @@ clone_git_repos:
   executor: build-executor
   steps:
     - run: |
-        git clone https://github.com/LineageOS/android_hardware_samsung hardware/samsung -b << parameters.branch_name >>
-        git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt hardware/samsung_slsi/libbt -b << parameters.branch_name >>
-        git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal hardware/samsung_slsi/scsc_wifibt/wifi_hal -b << parameters.branch_name >>
-        git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib -b << parameters.branch_name >>
-        git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common device/samsung/exynos7885-common -b << parameters.branch_name >>
-        git clone https://github.com/exynos7885-dev/android_device_samsung_a7y18lte device/samsung/a7y18lte -b << parameters.branch_name >>
-        git clone https://github.com/exynos7885-dev/android_vendor_samsung_exynos7885-common vendor/samsung/exynos7885 -b << parameters.branch_name >>
-        git clone https://github.com/exynos7885-dev/android_kernel_samsung_exynos7885 kernel/samsung -b << parameters.branch_name >>
+        git clone https://github.com/LineageOS/android_hardware_samsung hardware/samsung -b << parameters.branch_username >>
+        git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt hardware/samsung_slsi/libbt -b << parameters.branch_username >>
+        git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal hardware/samsung_slsi/scsc_wifibt/wifi_hal -b << parameters.branch_username >>
+        git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib -b << parameters.branch_username >>
+        git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common device/samsung/exynos7885-common -b << parameters.branch_username >>
+        git clone https://github.com/exynos7885-dev/android_device_samsung_a7y18lte device/samsung/a7y18lte -b << parameters.branch_username >>
+        git clone https://github.com/exynos7885-dev/android_vendor_samsung_exynos7885-common vendor/samsung/exynos7885 -b << parameters.branch_username >>
+        git clone https://github.com/exynos7885-dev/android_kernel_samsung_exynos7885 kernel/samsung -b << parameters.branch_username >>
         
   build_lineage:
     executor: build-executor
