--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,91 +1,43 @@
 version: 2.1
 
-parameters:
-  GIT_USER_EMAIL:
-    type: string
-    default: "youremail@example.com"
-  GIT_USER_NAME:
-    type: string
-    default: "your-username"
-
 executors:
   build-executor:
     docker:
       - image: lineageos4microg/docker-lineage-cicd:latest
-    environment:
-      GIT_EMAIL: ${GIT_USER_EMAIL}
-      GIT_USERNAME: ${GIT_USER_NAME}
-
-commands:
-  setup_environment:
-    parameters:
-      device_name:
-        type: string
-    steps:
-      - run: echo 'export TARGET_DEVICE=${device_name}' >> $BASH_ENV
-
-  configure_git:
-    steps:
-      - run:
-          name: Configure git user
-          command: |
-            git config --global user.email "${GIT_EMAIL}"
-            git config --global user.name "${GIT_USERNAME}"
-
-  install_git_lfs:
-    steps:
-      - run:
-          name: Install git-lfs
-          command: |
-            git lfs install
 
 jobs:
-  initial_setup:
-    executor: build-executor
-    steps:
-      - checkout
-      - configure_git
-      - install_git_lfs
-
-  setup:
-    parameters:
-      target_device:
-        type: string
-        default: "a7y18lte"
-    executor: build-executor
-    steps:
-      - setup_environment:
-          device_name: ${target_device}
-
   build_lineage:
     executor: build-executor
     steps:
-      - run: |
-          mkdir -p ~/android/lineage/src
-          cd ~/android/lineage/src
-          repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --git-lfs
-          repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
-          git clone https://github.com/LineageOS/android_hardware_samsung hardware/samsung -b lineage-18.1
-          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt hardware/samsung_slsi/libbt -b lineage-18.1
-          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal hardware/samsung_slsi/scsc_wifibt/wifi_hal -b lineage-18.1
-          git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib -b lineage-18.1
-          git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common device/samsung/exynos7885-common -b lineage-18.1
-          git clone https://github.com/exynos7885-dev/android_device_samsung_a7y18lte device/samsung/a7y18lte -b lineage-18.1
-          git clone https://github.com/exynos7885-dev/android_vendor_samsung_exynos7885-common vendor/samsung/exynos7885 -b lineage-18.1
-          git clone https://github.com/exynos7885-dev/android_kernel_samsung_exynos7885 kernel/samsung -b lineage-18.1
-          source build/envsetup.sh
-          lunch lineage_a7y18lte-userdebug
-          m -j$(nproc) bacon
-
+      - checkout
+      - run:
+          name: Setup Environment and Git Config
+          command: |
+            echo 'export TARGET_DEVICE=a7y18lte' >> $BASH_ENV
+            git config --global user.email "youremail@example.com"
+            git config --global user.name "your-username"
+            git lfs install
+      - run:
+          name: Build LineageOS
+          command: |
+            mkdir -p ~/android/lineage/src
+            cd ~/android/lineage/src
+            repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --git-lfs
+            repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
+            git clone https://github.com/LineageOS/android_hardware_samsung hardware/samsung -b lineage-18.1
+            git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt hardware/samsung_slsi/libbt -b lineage-18.1
+            git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wifi_hal hardware/samsung_slsi/scsc_wifibt/wifi_hal -b lineage-18.1
+            git clone https://github.com/LineageOS/android_hardware_samsung_slsi_scsc_wifibt_wpa_supplicant_lib hardware/samsung_slsi/scsc_wifibt/wpa_supplicant_lib -b lineage-18.1
+            git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common device/samsung/exynos7885-common -b lineage-18.1
+            git clone https://github.com/exynos7885-dev/android_device_samsung_a7y18lte device/samsung/a7y18lte -b lineage-18.1
+            git clone https://github.com/exynos7885-dev/android_vendor_samsung_exynos7885-common vendor/samsung/exynos7885 -b lineage-18.1
+            git clone https://github.com/exynos7885-dev/android_kernel_samsung_exynos7885 kernel/samsung -b lineage-18.1
+            source build/envsetup.sh
+            lunch lineage_a7y18lte-userdebug
+            m -j$(nproc) bacon
 
 workflows:
   version: 2
   build-lineage:
     jobs:
-      - initial_setup
-      - setup:
-          requires:
-            - initial_setup
-      - build_lineage:
-          requires:
-            - setup
+      - build_lineage
