--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,8 @@ jobs:
       - run:
           name: Clone LineageOS Common Samsung repos
           command: |
+            pwd
+            ls -al
             git clone https://github.com/LineageOS/android_device_samsung_slsi_sepolicy device/samsung_slsi/sepolicy -b $TARGET_BRANCH
             git clone https://github.com/LineageOS/android_hardware_samsung hardware/samsung -b $TARGET_BRANCH
             git clone https://github.com/LineageOS/android_hardware_samsung_slsi_libbt hardware/samsung_slsi/libbt -b $TARGET_BRANCH
@@ -36,6 +38,8 @@ jobs:
       - run:
           name: Clone Exynos7885 repos
           command: |
+            pwd
+            ls -al
             git clone https://github.com/exynos7885-dev/android_device_samsung_exynos7885-common device/samsung/exynos7885-common -b $TARGET_BRANCH
             git clone https://github.com/exynos7885-dev/android_device_samsung_a7y18lte device/samsung/a7y18lte -b $TARGET_BRANCH
             git clone https://github.com/exynos7885-dev/android_vendor_samsung_exynos7885-common vendor/samsung/exynos7885-common -b $TARGET_BRANCH
@@ -43,6 +47,9 @@ jobs:
       - run:
           name: Init Device
           command: |
+            pwd
+            ls -al
+            ls -al ~
             source build/envsetup.sh
             lunch lineage_a7y18lte-userdebug
       - run:
