--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
       - run:
           name: Build LineageOS
           command: |
+            cd android/lineage
             m -j$(nproc) bacon
 
 workflows:
